fixed the mobile version extra white space on the side

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -106,6 +106,7 @@ p {
     #image {
         min-height:200px;
         /* flex-basis: %; */
+        min-width: 100%;
         background-position: unset;
         background-position-y:-20px ;
         border-radius: 10px 10px 0 0;
